<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Event-management</string>
    <string name="club_name">Inner Wheel Club of Vasco-Da-Gama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_user">Not a user?</string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="parent_name">Parent/Guardian Name</string>
    <string name="phone">Contact no.</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="already_registered">Already registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration_complete">Registration complete!</string>
    <string name="registration_successful_message">You have successfully registered with us. You can now add your childrens’ information for convenience while registering for a commpetition.</string>
    <string name="add_child">Add Child</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="school">School</string>
    <string name="add">Add</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="child_name">Child Name</string>
    <string name="child_age">Child age</string>
    <string name="child_school">Child school</string>
    <string name="settings">Account Settings</string>
    <string name="about_us">About us</string>
    <string name="hi_person">Hi, person</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="lead_the_change">Lead the Change</string>
    <string name="drawing">Drawing</string>
    <string name="date_string">17th September</string>
    <string name="start">Start:</string>
    <string name="dummy_start_time">9:30 a.m.</string>
    <string name="end">End:</string>
    <string name="dummy_end_time">1:30 p.m.</string>
    <string name="first_prize_is">First prize is Rs 1000/-</string>
    <string name="second_prize">Second prize is Rs 750/-</string>
    <string name="third_prize_is">Third prize is Rs 500/-</string>
    <string name="judges_instructions_heading_text">Judges Instructions:</string>
    <string name="the_rules_of_the_competition_are_as_following">The rules of the competition are as following:</string>
    <string name="rule1_text">1. Lorem Ipsum</string>
    <string name="rule2_text">2. Lorem Ipsum</string>
    <string name="rule3_text">3. Lorem Ipsum</string>
    <string name="topics_will_be_disclosed_on_the_day_of_competition">* Topics will be disclosed on the day of competition</string>
    <string name="fees_details">Fees Details:</string>
    <string name="dummy_fees">Rs 100/-</string>
    <string name="do_not_combine_multiple_registration">Do not combine multiple registration fees. Pay separate fees for sibling participant.</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</string>
    <string name="results">Results:</string>
    <string name="age_grp_1" tools:ignore="TypographyDashes">Ages 8-11:</string>
    <string name="first_place">First Place:</string>
    <string name="nipun_aggarwal">Nipun Aggarwal</string>
    <string name="rs_1000">Rs 1000/-</string>
    <string name="second_place">Second Place:</string>
    <string name="harsh_nigam">Harsh Nigam</string>
    <string name="rs_500">Rs 500/-</string>
    <string name="rs_750">Rs 750/-</string>
    <string name="ritviz">Ritviz</string>
    <string name="hi_nipun">Hi Nipun</string>
    <string name="registered_events">Registered events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past events</string>
    <string name="new_participant">New participant</string>
    <string name="saved_participants">Saved participants</string>
    <string name="participant_details">Participant Details</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="add_submission">Add submission for:</string>
    <string name="ongoing_events">Ongoing events</string>
    <string name="the_topics_are_as_follows">The topics are as follows:</string>
    <string name="group_1">"Group 1: "</string>
    <string name="group_2">"Group 2: "</string>
    <string name="group_3">"Group 3: "</string>
    <string name="name">Name:</string>
    <string name="age_">Age :</string>
    <string name="school_">School:</string>
    <string name="topic">Topic:</string>
    <string name="upload_submission">Upload submission</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="transaction_history">Transaction History</string>
    <string name="rs_0">Rs 0/-</string>
    <string name="successful">SUCCESSFUL</string>
    <string name="jan_01_2020">Jan 01, 2020</string>
    <string name="details">Details</string>
    <string name="sbi0003">SBI0003</string>
    <string name="transaction_id">Transaction ID :</string>
    <string name="competition">Competition :</string>
    <string name="participant">Participant :</string>
    <string name="next">Next</string>
    <string name="no_participants_registered">No participants registered by you.</string>
    <string name="ages">Ages :</string>
    <string name="third_place">Third Place:</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="edit_account_details">Edit Account Details:</string>
    <string name="update">Update</string>
    <string name="child_details">Child Details</string>
    <string name="edit_child_details">Edit Child details:</string>
</resources>