<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingStart="30dp"
    tools:ignore="RtlSymmetry">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judges_instructions_heading_text"
        android:id="@+id/judge_instruction_heading"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/the_rules_of_the_competition_are_as_following"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/rule1_text"
        android:id="@+id/rule1"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule2_text"
        android:visibility="gone"
        android:id="@+id/rule2"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule3_text"
        android:visibility="gone"
        android:id="@+id/rule3"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/dark_grey"
        android:textSize="14sp" />
</LinearLayout>