<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="30dp"
    android:paddingTop="40dp">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_prize_is"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/first_prize_text"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_prize"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/second_prize_text"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_prize_is"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:id="@+id/third_prize_text"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/trophy"
        tools:ignore="ContentDescription" />
</LinearLayout>