<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:id="@+id/transaction_card"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_card_amount"
            android:text="@string/rs_0"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="17sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:id="@+id/transaction_card_status"
                android:text="@string/successful"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:id="@+id/transaction_card_date"
                android:text="@string/jan_01_2020"
                android:textAlignment="textEnd"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:visibility="gone"
            android:id="@+id/transaction_card_details_heading"
            android:text="@string/details"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="17sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_card_id_layout"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transaction_id"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/transaction_card_id_text"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_card_competition_layout"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/competition"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/transaction_card_competition"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_card_participant_layout"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/participant"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/transaction_card_participant"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_card_age_layout"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age_"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="14sp"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/transaction_card_participant_age"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>